RESOLVED FIXED44440
Many LayoutTests crash when run with --html5-treebuilder
https://bugs.webkit.org/show_bug.cgi?id=44440
Summary Many LayoutTests crash when run with --html5-treebuilder
Adam Barth
Reported 2010-08-23 11:00:19 PDT
Many LayoutTests crash when run with --html5-treebuilder
Attachments
Patch (1.69 KB, patch)
2010-08-23 11:01 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-08-23 11:01:53 PDT
Eric Seidel (no email)
Comment 2 2010-08-23 11:09:39 PDT
Comment on attachment 65140 [details] Patch LGTM.
Eric Seidel (no email)
Comment 3 2010-08-23 11:12:23 PDT
Comment on attachment 65140 [details] Patch Clearing flags on attachment: 65140 Committed r65819: <http://trac.webkit.org/changeset/65819>
Eric Seidel (no email)
Comment 4 2010-08-23 11:12:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.